CI/CD: fix audit workflow

--- a/.github/workflows/audit.yml
+++ b/.github/workflows/audit.yml
@@ -3,7 +3,9 @@ name: audit dependencies
 on:
   push:
     branches:
-      - ['**']
+      - '**'
+    tags-ignore:
+      - '**'
 
 jobs:
   audit-pingoo:
