--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -1,9 +1,11 @@
-# Using lld as the linker greatly improve compilation time
+[build]
+rustflags = ["-C", "target-cpu=native"]
+
+# Using lld as the linker greatly improve compilation time.
+# Since Rust 1.90 lld is the default linker on x86_64-unknown-linux-gnu
 [target.x86_64-unknown-linux-musl]
-rustflags = ["-C", "link-args=-fuse-ld=lld", "-C", "target-cpu=native"]
-[target.x86_64-unknown-linux-gnu]
-rustflags = ["-C", "link-args=-fuse-ld=lld", "-C", "target-cpu=native"]
+rustflags = ["-C", "link-args=-fuse-ld=lld"]
 [target.aarch64-unknown-linux-gnu]
-rustflags = ["-C", "link-args=-fuse-ld=lld", "-C", "target-cpu=native"]
+rustflags = ["-C", "link-args=-fuse-ld=lld"]
 [target.aarch64-unknown-linux-musl]
-rustflags = ["-C", "link-args=-fuse-ld=lld", "-C", "target-cpu=native"]
+rustflags = ["-C", "link-args=-fuse-ld=lld"]
