--- a/pingoo/Cargo.toml
+++ b/pingoo/Cargo.toml
@@ -14,7 +14,6 @@ jwt = { path = "../jwt" }
 captcha = { path = "../captcha" }
 rules = { path = "../rules" }
 
-arc-swap = { workspace = true }
 async-trait = { workspace = true }
 aws-lc-rs = { workspace = true }
 base64 = { workspace = true }
@@ -34,6 +33,7 @@ hyper = { workspace = true, features = ["full"] }
 hyper-rustls = { workspace = true, features = ["http2"] }
 hyper-util = { workspace = true, features = ["full"] }
 indexmap = { workspace = true, features = ["serde"] }
+instant-acme = { workspace = true }
 ipnetwork = { workspace = true, features = ["serde"] }
 maxminddb = { workspace = true }
 mimalloc = { workspace = true }
