--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -102,3 +102,18 @@ jobs:
             --amend ${{ env.DOCKER_HUB_IMAGE }}:latest-amd64 \
             --amend ${{ env.DOCKER_HUB_IMAGE }}:latest-arm64
           docker manifest push ${{ env.DOCKER_HUB_IMAGE }}:latest
+
+
+  publish_docs:
+    needs:
+      - docker_push_manifest
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@ff7abcd0c3c05ccf6adc123a8cd1fd4fb30fb493 # v5.0.0
+
+      - name: publish
+        env:
+          MARKDOWN_NINJA_API_KEY: ${{ secrets.MARKDOWN_NINJA_API_KEY }}
+        working-directory: docs
+        run: |
+          docker run -i --rm -e MARKDOWN_NINJA_API_KEY -v `pwd`:/mdninja ghcr.io/bloom42/markdown-ninja publish
