--- a/Cargo.toml
+++ b/Cargo.toml
@@ -109,6 +109,7 @@ uuid = { git = "https://github.com/pingooio/stdx-rs", branch = "main" }
 
 
 thiserror = { git = "https://github.com/dtolnay/thiserror", rev = "d2c492b5498a0134abcc1677101bec876fe0621a" }
+thiserror-impl =  { git = "https://github.com/dtolnay/thiserror", rev = "d2c492b5498a0134abcc1677101bec876fe0621a" }
 async-trait = { git = "https://github.com/dtolnay/async-trait", rev = "fbd86047d853c78d0c646fb947e39b73d53ead0d" }
 serde = { git = "https://github.com/serde-rs/serde", rev = "a866b336f14aa57a07f0d0be9f8762746e64ecb4" }
 serde_core = { git = "https://github.com/serde-rs/serde", rev = "a866b336f14aa57a07f0d0be9f8762746e64ecb4" }
