--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,4 +1,4 @@
-FROM node:24-bookworm-slim AS node
+FROM node:24-trixie-slim AS node
 
 FROM ubuntu:24.04
 
@@ -25,7 +25,7 @@ RUN apt-get install -y --no-install-recommends \
 COPY --from=node /usr/local/bin/node /usr/local/bin/
 COPY --from=node /usr/local/lib/node_modules /usr/local/lib/node_modules
 RUN ln -s /usr/local/lib/node_modules/npm/bin/npm-cli.js /usr/local/bin/npm \
-  && ln -s /usr/local/lib/node_modules/npm/bin/npx-cli.js /usr/local/bin/npx
+    && ln -s /usr/local/lib/node_modules/npm/bin/npx-cli.js /usr/local/bin/npx
 
 RUN npm config set ignore-scripts true
 RUN /usr/local/bin/npm i -g npm@latest
